--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint src/ --fix",
-    "test": "jest --passWithNoTests"
+    "lint": "eslint src/ --fix"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -52,8 +51,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "husky": "^4.2.5",
-    "jest-expo": "^37.0.0",
     "lint-staged": "^10.2.0",
     "mem": ">=4.0.0",
     "minimist": ">=1.2.3",
@@ -69,22 +66,10 @@
     "singleQuote": true,
     "bracketSpacing": true
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
-    ]
-  },
   "lint-staged": {
     "*.{js,jsx}": [
       "pretty-quick --staged",
       "yarn lint",
-      "yarn test",
       "git add"
     ]
   }
