Atualizando Splash Screen e nome do app

--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "platbeer",
-    "slug": "platbeer",
+    "name": "ambeever",
+    "slug": "ambeever",
     "privacy": "public",
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo-sm.png",
+    "icon": "./assets/images/logo.png",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFC60B"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
