--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-svg": "11.0.1",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "^8.1.0",
+    "babel-preset-expo": "^8.2.3",
     "braces": ">=2.3.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -53,12 +53,12 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "lint-staged": "^10.2.0",
-    "mem": ">=4.0.0",
+    "mem": "^6.1.0",
     "minimist": ">=1.2.3",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "react-test-renderer": "^16.13.1",
-    "ws": ">=3.3.1"
+    "ws": "^7.3.1"
   },
   "prettier": {
     "trailingComma": "all",
